--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -148,13 +148,15 @@
 /* Közepes készülékek (tabletek, 768px és 991px között) */
 @media (min-width: 768px) and (max-width: 991.98px) {
   .section{
-    height: 100%;
+    height: auto;
   }
 }
 
 /* Nagy készülékek (asztali gépek, 992px és 1199px között) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
-
+  .section{
+    height: auto;
+  }
 }
 
 /* Extra nagy készülékek (asztali gépek, 1200px és afölött) */
