--- a/src/Components/PhotoGallery/PhotoGallery.module.css
+++ b/src/Components/PhotoGallery/PhotoGallery.module.css
@@ -21,7 +21,11 @@ html, body {
     background-color: white;
     font-family: "Bebas Neue", sans-serif;
     font-size: 1.3rem;
-}
+    white-space: nowrap; /* Szöveg ne tördeljen */
+    overflow: hidden; /* Túlcsorduló rész legyen rejtve */
+    text-overflow: ellipsis; /* Három pont az elvágott rész után */
+    max-width: 100%;
+  }
 
 .caption {
     font-size: 14px;
