--- a/src/Components/AdminPage/DarkMode.module.css
+++ b/src/Components/AdminPage/DarkMode.module.css
@@ -2,12 +2,21 @@
   background-color: #181a1e;
   transition: background-color 0.5s ease, color 0.5s ease;
   color: #fff;
-  margin-top: 3rem;
+  margin-top: 5rem;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px 20px 0px 20px;
+  padding: 30px 20px 50px 20px;
+}
+
+.buttonRow {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+  align-items: center;
 }
 
 .uploadFile {
