--- a/src/Components/PhotoGallery/CardGalleryTest.module.css
+++ b/src/Components/PhotoGallery/CardGalleryTest.module.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 3rem
+    margin-top: 3rem;
+    width: 60%;
   }
   
   .rowContainer {
@@ -48,6 +49,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    white-space: nowrap; /* Szöveg ne tördeljen */
+    overflow: hidden; /* Túlcsorduló rész legyen rejtve */
+    text-overflow: ellipsis; /* Három pont az elvágott rész után */
   }
   
   .cardText {
