--- a/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
+++ b/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
@@ -21,6 +21,10 @@
     z-index: 2;
 }
 
+.wordCloudMobile {
+    display: none;
+  }
+
 .titleBox {
   position: absolute;
   left: 5%;
@@ -200,12 +204,13 @@
         margin-bottom: 6rem;
       }
       .wordCloud {
-        display: none; /* Mobil nézetben eltűnik */
+        display: none; 
       }
     
       .wordCloudMobile {
-        display: block; /* Mobil nézetben látszik */
+        display: block; 
       }
+
   }
 
   @media (min-width: 376px) and (max-width: 575.98px) {
@@ -271,11 +276,11 @@
         margin-bottom: 6rem;
       }
       .wordCloud {
-        display: none; /* Mobil nézetben eltűnik */
+        display: none; 
       }
     
       .wordCloudMobile {
-        display: block; /* Mobil nézetben látszik */
+        display: block; 
       }
   }
 
@@ -335,8 +340,11 @@
         display: inline-block; /* szükséges a középre igazításhoz */
       }
       .wordCloud {
-        max-width: 100%; /* A kép szélességét igazítja */
-        height: auto; /* Megőrzi a kép arányait */
+        display: none; 
+      }
+    
+      .wordCloudMobile {
+        display: block; 
       }
   }
 
