--- a/src/Components/PhotoGallery/CardGalleryTest.module.css
+++ b/src/Components/PhotoGallery/CardGalleryTest.module.css
@@ -127,8 +127,8 @@
         font-size: 1rem;
       }
       .cardContainer {
-        padding: 0px 20px 0px 20px;
-        margin-top: -4rem;
+        margin-top: -5rem;
+        width: 100%;
       }
 }
 
@@ -137,6 +137,10 @@
         padding: 0px 20px 0px 20px;
         margin-top: -3rem;
         margin-bottom: 4rem;
+      }
+      .cardContainer {
+        margin-top: -2rem;
+        width: 100%;
       }
 }
 
