--- a/src/Components/UI/OpinionSwiper/DesktopSlider.module.css
+++ b/src/Components/UI/OpinionSwiper/DesktopSlider.module.css
@@ -1,14 +1,14 @@
 .swiper {
     width: 100%;
     height: 100%;
-    background-color: rgb(255, 105, 180);
+    background-color: #ff7f7f;
     padding: 40px;
     padding-bottom: 4rem;
   }
 
   .wrapper{
     padding-bottom: 2rem;
-    background-color: rgb(255, 105, 180);
+    background-color: #ff7f7f;
     text-align: center;
   }
   
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
     /* Set a minimum height */
-    min-height: 350px;
+    min-height: 200px;
     border-radius: 10px;
     padding: 0 25px;
 
@@ -53,7 +53,7 @@
     color: #ffffff;
     text-align: center;
     font-family: "Bebas Neue";
-    background-color: rgb(255, 105, 180);
+    background-color: #ff7f7f;
     display: inline-block;
     position: relative;
     padding-top: 2rem;
@@ -74,7 +74,7 @@
     margin-top: -30px;
     border: none;
     height: 3px;
-    background-color: #FF69B4;
+    background-color: #ff7f7f;
     width: 8%;
     margin-left: auto;
     margin-right: auto;
