--- a/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
+++ b/src/Components/ParallaxIntroductorySection/ParalaxSection.module.css
@@ -41,7 +41,7 @@
 }
 
 .pinkText {
-    color: #FF69B4;
+    color: #FF7F7F;
     font-weight: normal;
 }
 
@@ -138,7 +138,7 @@
     transform: translateX(-50%); 
     width: 100%; 
     height: 4px; /* Vonal magassága */
-    background-color: #FF69B4; /* Vonal színe */
+    background-color: #FF7F7F; /* Vonal színe */
   }
 
   @media (min-width: 320px) and (max-width: 375px) {
