--- a/src/Components/UI/OpinionSwiper/DesktopSlider.module.css
+++ b/src/Components/UI/OpinionSwiper/DesktopSlider.module.css
@@ -1,14 +1,14 @@
 .swiper {
     width: 100%;
     height: 100%;
-    background-color: #ff7f7f;
+    background-color: #FF7F7F;
     padding: 40px;
     padding-bottom: 4rem;
   }
 
   .wrapper{
     padding-bottom: 2rem;
-    background-color: #ff7f7f;
+    background-color: #FF7F7F;
     text-align: center;
   }
   
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
     /* Set a minimum height */
-    min-height: 200px;
+    min-height: 250px;
     border-radius: 10px;
     padding: 0 25px;
 
@@ -33,7 +33,7 @@
 
   
   .swiper-slide p{
-    font-size: 20px;
+    font-size: 1.6rem;
   }
 
   .swiper-button-prev {
@@ -53,7 +53,7 @@
     color: #ffffff;
     text-align: center;
     font-family: "Bebas Neue";
-    background-color: #ff7f7f;
+    background-color: #FF7F7F;
     display: inline-block;
     position: relative;
     padding-top: 2rem;
@@ -74,16 +74,23 @@
     margin-top: -30px;
     border: none;
     height: 3px;
-    background-color: #ff7f7f;
-    width: 8%;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: #FF69B4;
   }
 
-  @media only screen and (max-width: 600px) {
-
+   /* Mobil eszközök (kis képernyő) */
+@media only screen and (max-width: 400px) {
+  .swiper-slide p{
+    font-size: 1.3rem;
   }
-  
+} 
+
+/* Mobil eszközök (kis képernyő) */
+@media only screen and (min-width: 401px) and (max-width: 767px) {
+  .swiper-slide p{
+    font-size: 1.3rem;
+  }
+}
+
   /* Medium devices (tablets) */
   @media only screen and (min-width: 601px) and (max-width: 960px) {
     .swiper-slide {
