--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -1,6 +1,7 @@
 .background-container {
     background-image: url("../../Assets/CakesPicture/splashbackground3.png");
-    background-size: cover;
+    background-size: 95%; /* A háttérkép mérete 80%-ra csökkentve */
+    background-repeat: no-repeat; /* Ne ismétlődjön */
     background-position: center;
     height: 100vh;
     display: flex;
@@ -8,6 +9,39 @@
     align-items: center;
     width: 100%;
     position: relative;
+    background-color: #F4F4F4;
+}
+
+
+/* Bal felső sarokban lévő cím */
+.page-title {
+    position: absolute;
+    top: 20px; /* 20px-re az oldal tetejétől */
+    left: 60px; /* 20px-re az oldal bal szélétől */
+    font-size: 2.8rem;
+    font-family: "Bebas Neue";
+    color: #F4F4F4; /* Vagy más szín, ami jól látszik a háttéren */
+    background-color: #FF7F7F;
+    width: 200px;
+    padding: 5px 0px 0px 0px;
+    text-align: center;
+    align-items: center;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Árnyék a jobb láthatóság érdekében */
+}
+
+.page-title2 {
+    position: absolute;
+    top: 70px; /* 20px-re az oldal tetejétől */
+    left: 130px; /* 20px-re az oldal bal szélétől */
+    font-size: 2.8rem;
+    font-family: "Bebas Neue";
+    color: #F4F4F4; /* Vagy más szín, ami jól látszik a háttéren */
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Árnyék a jobb láthatóság érdekében */
+    background-color: #473939;
+    width: 200px;
+    padding: 5px 0px 0px 0px;
+    text-align: center;
+    align-items: center;
 }
 
 .image-row {
