--- a/src/Components/Layout/Header.module.css
+++ b/src/Components/Layout/Header.module.css
@@ -93,13 +93,13 @@
 }
 
 
-.header a {
+/*.header a {
   color: #1f1e1d;
   text-decoration: none;
   font-size: 1.2rem;
   font-weight: 550;
   
-}
+}*/
 
 
 /* Mobil eszközök (kis képernyő) */
