--- a/src/Components/Layout/Header.module.css
+++ b/src/Components/Layout/Header.module.css
@@ -17,12 +17,9 @@
 }
 
 .dropdownMenu {
-  position: absolute;
-  left: 60%;
-  transform: translateX(-50%); /* Centers the menu horizontally */
-  top: 40%; /* Centers the menu vertically */
-  transform: translate(-50%, -50%); /* Final centering */
-  /* You can add any other styling you want here */
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .hidden {
@@ -51,14 +48,14 @@
 }
 
 .mainTitle{
-  width: 35%;
+  width: 55%;
   height: auto;
   margin-left: 2rem;
   transition: width 0.6s ease-in-out; 
 }
 
 .mainTitleHidden{
-  width: 30%;
+  width: 50%;
   height: auto;
   margin-left: 2rem;
   transition: width 0.6s ease-in-out; 
