--- a/src/Components/Navigation/DropdownMenu.module.css
+++ b/src/Components/Navigation/DropdownMenu.module.css
@@ -1,7 +1,8 @@
 .nav {
   margin: 0 auto;
   display: block;
-  padding: 20px 0 0 0;
+  /*padding: 20px 0 0 0;*/
+  padding: 0;
   text-align: center;
 }
 
@@ -82,7 +83,26 @@
   border-style: none;
   background-color: #ffffff;
   white-space: nowrap;
+  position: relative;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
+  box-shadow: 4px 8px 12px -3px rgba(0,0,0,0.75);
 }
+
+.dropdownItem:not(:last-child)::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+  right: 20px;
+  height: 1px;
+  background-color: #FF7F7F;
+}
+
+.dropdownItem:last-child {
+  border-bottom: none;
+}
+
 
 .dropdownLink {
   color: #473939;
@@ -104,13 +124,11 @@
   transition: width 0.3s ease;
 }
 
-.dropdownLink:hover::after {
-  width: 100%;
-}
+
 
 .dropdownLink:hover {
-  padding-left: 10px;
-  color: #473939;
+  /*padding-left: 10px;*/
+  color: #FF7F7F;
 }
 
 a {
