--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -44,6 +44,21 @@
     align-items: center;
 }
 
+.page-title3 {
+    position: absolute;
+    top: 20px; /* 20px-re az oldal tetejétől */
+    left: 60px; /* 20px-re az oldal bal szélétől */
+    font-size: 2.8rem;
+    font-family: "Bebas Neue";
+    color: #F4F4F4; /* Vagy más szín, ami jól látszik a háttéren */
+    background-color: #FF7F7F;
+    width: 200px;
+    padding: 5px 0px 0px 0px;
+    text-align: center;
+    align-items: center;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Árnyék a jobb láthatóság érdekében */
+}
+
 .image-row {
     display: flex;
     gap: 0%;
@@ -114,6 +129,7 @@
         width: 100%;
         justify-content: center;
         align-items: center; /* Képek alapból középre igazítása */
+        margin-top: 2rem;
     }
     
     .image-row img {
@@ -121,11 +137,11 @@
      
     }
     .background-container {
-        background-image: url("../../Assets/CakesPicture/splashbackground3.png");
+        background-image: none;
         background-size: 100%; /* A háttérkép mérete 80%-ra csökkentve */
         background-repeat: no-repeat; /* Ne ismétlődjön */
         background-position: center;
-        height: 80vh;
+        height: 90vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -133,15 +149,29 @@
         position: relative;
         background-color: #F4F4F4;
     }
+    .background-container-single {
+        background-image: none;
+        background-size: 100%; /* A háttérkép mérete 80%-ra csökkentve */
+        background-repeat: no-repeat; /* Ne ismétlődjön */
+        background-position: center;
+        height: 70vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        position: relative;
+        background-color: #F4F4F4;
+    }
+    
     .page-title {
         position: absolute;
         top: 40px; /* 20px-re az oldal tetejétől */
         left: 60px; /* 20px-re az oldal bal szélétől */
-        font-size: 3rem;
+        font-size: 3.3rem;
         font-family: "Bebas Neue";
         color: #F4F4F4; /* Vagy más szín, ami jól látszik a háttéren */
         background-color: #FF7F7F;
-        width: 200px;
+        width: 250px;
         padding: 5px 0px 0px 0px;
         text-align: center;
         align-items: center;
@@ -150,22 +180,36 @@
     
     .page-title2 {
         position: absolute;
-        top: 95px; /* 20px-re az oldal tetejétől */
-        left: 110px; /* 20px-re az oldal bal szélétől */
-        font-size: 3rem;
+        top: 100px; /* 20px-re az oldal tetejétől */
+        left: 130px; /* 20px-re az oldal bal szélétől */
+        font-size: 3.3rem;
         font-family: "Bebas Neue";
         color: #F4F4F4; /* Vagy más szín, ami jól látszik a háttéren */
         box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Árnyék a jobb láthatóság érdekében */
         background-color: #473939;
-        width: 200px;
+        width: 250px;
         padding: 5px 0px 0px 0px;
         text-align: center;
         align-items: center;
     }
+    .page-title3 {
+        position: absolute;
+        top: 20px; /* 20px-re az oldal tetejétől */
+        left: 60px; /* 20px-re az oldal bal szélétől */
+        font-size: 3rem;
+        font-family: "Bebas Neue";
+        color: #F4F4F4; /* Vagy más szín, ami jól látszik a háttéren */
+        background-color: #FF7F7F;
+        width: 300px;
+        padding: 5px 0px 0px 0px;
+        text-align: center;
+        align-items: center;
+        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Árnyék a jobb láthatóság érdekében */
+    }
     .cardTextNext {
         color: #ff7f7f;
         font-family: "Bebas Neue", sans-serif;
-        font-size: 2rem;
+        font-size: 2.5rem;
         display: flex;
         align-items: center;
         justify-content: center;
