--- a/src/Components/IntroSection/IntroSection.module.css
+++ b/src/Components/IntroSection/IntroSection.module.css
@@ -1,4 +1,5 @@
 .container {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,6 +10,7 @@
   width: 100%;
   background-color: #F4F4F4;
   height: 100vh;
+  overflow: visible;
 }
 
 .leftSection {
@@ -37,9 +39,15 @@
 
 .centeredTextTitle {
   font-family: "Bebas Neue", sans-serif;
-  font-size: 3.5rem;
+  font-size: 4rem;
   margin: 0;
   line-height: 1.2;
+}
+
+.pinkText, .blackText {
+  display: inline-block;
+  font-family: inherit;
+  font-size: inherit;
 }
 
 .pinkText {
@@ -51,23 +59,32 @@
 }
 
 .rectangle {
-
   padding: 2rem;
   border-radius: 10px;
 }
 
 .introductoryText2 {
   font-family: "Sorts Mill Goudy", serif;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   line-height: 1.6;
   color: #1f1e1d;
   margin: 0;
+}
+
+.arrowContainer {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: fit-content;
+  z-index: 1;
 }
 
 @media (max-width: 768px) {
   .container {
     flex-direction: column;
     padding: 1rem;
+    padding-bottom: 80px;
   }
 
   .centeredTextTitle {
