--- a/src/Components/AdminPage/LoginForm.module.css
+++ b/src/Components/AdminPage/LoginForm.module.css
@@ -8,7 +8,7 @@
   background: linear-gradient(
     135deg,
     rgba(36, 46, 77, 0.9),
-    rgba(137, 126, 121, 0.9)
+    rgba(255, 127, 127, 0.9)
   );
   font-family: "Roboto", helvetica, arial, sans-serif;
   font-size: 1.5em;
@@ -35,7 +35,7 @@
   left: 0;
   height: 2px;
   width: 100%;
-  background: #df73ff;
+  background: #FF7F7F;
 }
 .errorMessage {
   color: #4169e1;
@@ -108,7 +108,7 @@
   flex: 1;
   padding: 1em;
   border: 0;
-  color: #df73ff;
+  color: #FF7F7F;
   font-size: 1rem;
   border-radius: 0px 10px 10px 0px;
   width: 10px;
@@ -123,7 +123,7 @@
   display: block;
   padding: 1em;
   width: 100%;
-  background: #df73ff;
+  background: #FF7F7F;
   border: 0;
   color: #fff;
   cursor: pointer;
