--- a/src/Components/Slider/Slider.module.css
+++ b/src/Components/Slider/Slider.module.css
@@ -26,7 +26,6 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background: rgba(255, 255, 255, 0.5);
   border: none;
   width: 50px;
   height: 50px;
@@ -36,17 +35,19 @@
   align-items: center;
   justify-content: center;
   font-size: 24px;
-  color: #333;
   transition: all 0.3s ease;
   z-index: 10;
 }
 
 .navButton:hover {
-  background: rgba(255, 255, 255, 0.8);
 }
 
 .prevButton {
   left: 20px;
+}
+
+.arrow{
+  height: 40px;
 }
 
 .nextButton {
