--- a/src/Components/Slider/Slider.module.css
+++ b/src/Components/Slider/Slider.module.css
@@ -28,8 +28,8 @@
   transform: translateY(-50%);
   border: none;
   width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  height: 70px;
+  border-radius: 20%;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -43,15 +43,17 @@
 }
 
 .prevButton {
-  left: 20px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .arrow{
-  height: 40px;
+  height: 30px;
 }
 
 .nextButton {
-  right: 20px;
+  right:  0px;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 /* Pöttyök */
