--- a/src/Components/Slider/Slider.module.css
+++ b/src/Components/Slider/Slider.module.css
@@ -116,4 +116,10 @@
     width: 10px;
     height: 10px;
   }
+  .sliderContainer {
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    overflow: hidden;
+  }
 } 
