--- a/src/Components/BurgerButton/BurgerButton.css
+++ b/src/Components/BurgerButton/BurgerButton.css
@@ -22,16 +22,19 @@
 .burger-bar.clicked:nth-child(1){
     transform: rotate(45deg) translate(0.2em, 0.75em);
     transition: ease-out 0.5s;
+    background-color: #473939;
 }
 
 .burger-bar.clicked:nth-child(2){
     transform: scale(0);
     transition: ease-out 0.5s;
+    background-color: #473939;
 }
 
 .burger-bar.clicked:nth-child(3){
     transform: rotate(135deg) translate(-0.3em, 0.8em);
     transition: ease-out 0.5s;
+    background-color: #473939;
 }
 
 /* unclicked */
