--- a/src/Components/PhotoGallery/CategorySection2.module.css
+++ b/src/Components/PhotoGallery/CategorySection2.module.css
@@ -27,6 +27,12 @@
     text-align: center;
     align-items: center;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Árnyék a jobb láthatóság érdekében */
+    opacity: 0;
+    transform: translateX(-100%);
+}
+
+.page-title.animate {
+    animation: slideInFromLeft 0.8s forwards;
 }
 
 .page-title2 {
@@ -42,6 +48,12 @@
     padding: 5px 0px 0px 0px;
     text-align: center;
     align-items: center;
+    opacity: 0;
+    transform: translateX(100%);
+}
+
+.page-title2.animate {
+    animation: slideInFromRight 0.8s forwards;
 }
 
 .page-title3 {
@@ -57,6 +69,12 @@
     text-align: center;
     align-items: center;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Árnyék a jobb láthatóság érdekében */
+    opacity: 0;
+    transform: translateX(-100%);
+}
+
+.page-title3.animate {
+    animation: slideInFromLeft 0.8s forwards;
 }
 
 .image-row {
@@ -231,4 +249,26 @@
         height: 48px;
       }
   }
+
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
 
